src/client/style/application.css
body {
    font-family: Segoe UI Emoji;
}

a {
    color: #FF9800;
}

a:hover {
    text-decoration: underline;
    cursor: pointer;
}

code {
    background-color: #cfd8dc;
    color: #FF9800;
    padding: 2px 5px;
    border-radius: 4px;
}

em:before, em:after {
    content: "\""
}

ol {
    list-style-type: none;
    padding-left: 2em;
}

ol li {
    counter-increment: list-numbers;
}

ol li::before {
    content: counter(list-numbers) ". ";
    display: block;
    position: relative;
    max-width: 0px;
    max-height: 0px;
    left: -2em;
    top: .05em;
    color: #FF9800;
}

.section {
    padding-bottom: 20px;
}

.section.alternate {
    color: #FFFFFF;
    background-color: #455A64;
}

.section two-face {
    margin-top: -18px;
    align-self: center;
}


/*Remove when not needed anymore */

.build-icon {
    font-size: 96px;
    transform-origin: 30px 30px;
    animation-name: work;
    animation-duration: 1s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}

@keyframes work {
    0% {
        transform: rotate(-50deg);
    }
    50% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(-50deg);
    }
}

